# FinGraph-Insight

./: .env.example  .gitignore  AGENTS.md  COMPLETE_WORK_SUMMARY.md  DOCKER.md  DOCKER_OPTIMIZATION_SUMMARY.md  FRONTEND_REFINEMENT_DONE.md  FRONTEND_UI_REFINEMENT_SUMMARY.md  README.md  docker-commands.bat  docker-commands.sh  docker-compose.yml  大作业指南2026春季.docx  大作业指南2026春季.md  项目规划文档.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/data/: akshare_fetcher.py  financial_dataset_loader.py  text_preprocessor.py
backend/app/models/: api.py
backend/app/neo4j/: __init__.py  connection.py  constraints.py  reader.py  writer.py
backend/app/services/: company_enrichment_service.py  entity_resolution_service.py  extraction_service.py  format_prompt.py  graph_runtime.py  (+19 more)
backend/tests/: conftest.py  graph_fixtures.py  test_akshare_scheduler.py  test_api_contract.py  test_company_enrichment.py  test_data_pipeline.py  test_docker_compose_contract.py  test_entity_resolution_service.py  test_gold_standard_real_data.py  test_graph_runtime.py  test_grok_news_service.py  test_live_http_e2e.py  test_live_neo4j_e2e.py  test_llm_backed_services.py  test_llm_router.py  test_market_service.py  test_metrics_service.py  test_neo4j_infrastructure.py  test_news_graph_service.py  test_news_service.py  test_pipeline_service.py  test_qa_and_metrics_services.py  test_risk_analyzer.py  test_stock_analysis_service.py  test_text2cypher_safety.py  test_vector_store_and_hybrid_rag.py
(+83 files in other folders)
